refactor: extract shared sidebar/market-widget/market-data into _includes components - unified navigation across all 8 pages with auto-active state detection

--- a/research/bacbb/index.html
+++ b/research/bacbb/index.html
@@ -135,41 +135,9 @@ permalink: /research/bacbb/
 <body>
 <img src="/assets/og-card.png" alt="" style="position:absolute;width:1px;height:1px;opacity:0;pointer-events:none;" aria-hidden="true">
 
-<!-- Left Sidebar -->
-<aside class="sidebar">
-    <div class="sidebar-profile">
-        <img src="/assets/profile.png" alt="Ha Rim Jung" class="profile-photo" data-nosnippet>
-        <div class="profile-info">
-            <div class="profile-name">Ha Rim Jung</div>
-            <div class="profile-title">Quantitative Researcher</div>
-            <p class="profile-bio">Interest rate modeling, derivatives pricing, and systematic trading strategies.</p>
-            <div class="profile-links">
-                <a href="https://github.com/gkfla2020-bit" target="_blank">GitHub</a>
-            </div>
-        </div>
-    </div>
-    <nav class="sidebar-nav">
-        <div class="nav-section">
-            <div class="nav-section-title">Navigation</div>
-            <ul class="nav-list">
-                <li><a href="/">Home</a></li>
-                <li><a href="/research/" class="active">Research</a></li>
-                <li><a href="/cv/">CV</a></li>
-            </ul>
-        </div>
-        <div class="nav-section">
-            <div class="nav-section-title">Research</div>
-            <ul class="nav-list">
-                <li><a href="/research/vol-integrated-kr/">Regime Shift & Spillover</a></li>
-                <li><a href="/research/move-vasicek-kr/">MOVE-Vasicek Model</a></li>
-                <li><a href="/research/bacbb/" class="active">BACBB Strategy</a></li>
-            </ul>
-        </div>
-    </nav>
-    <div class="sidebar-footer">© 2026 Ha Rim Jung</div>
-</aside>
+{% include sidebar.html %}
+{% include market-widget.html %}
 
-<div class="main-wrapper">
 <div class="main-wrapper">
 <div class="container">
 <div class="paper-content">
@@ -1237,5 +1205,6 @@ permalink: /research/bacbb/
 </div><!-- container -->
 </div><!-- main-wrapper -->
 
+{% include market-data.html %}
 </body>
 </html>
