Site structure audit R1-R5: unified sidebar layout, breadcrumbs, category system, mobile nav toggle

--- a/research/bacbb/index.html
+++ b/research/bacbb/index.html
@@ -1,6 +1,7 @@
 ---
 layout: null
 permalink: /research/bacbb/
+title: "BACBB Strategy"
 ---
 <!DOCTYPE html>
 <html lang="ko">
@@ -54,6 +55,7 @@ permalink: /research/bacbb/
         .nav-list a:hover{color:#0080c6;padding-left:5px}
         .nav-list a.active{color:#0080c6;font-weight:500}
         .sidebar-footer{padding-top:20px;border-top:1px solid rgba(0,0,0,.06);font-size:.7rem;color:#aaa;text-align:center}
+        .nav-toggle{display:none}
         
         /* Main Content */
         .main-wrapper{margin-left:280px;min-height:100vh}
@@ -105,6 +107,8 @@ permalink: /research/bacbb/
             .nav-list{display:flex;gap:12px;flex-wrap:wrap}
             .nav-list li{margin-bottom:0}
             .sidebar-footer{display:none}
+            .nav-extra{display:none}.sidebar-nav.expanded .nav-extra{display:inline-block}
+            .nav-toggle{display:inline-block;padding:8px 14px;background:none;border:1px solid #ddd;border-radius:6px;font-size:.75rem;color:#888;cursor:pointer;letter-spacing:.05em;margin-bottom:10px;font-family:'Inter',sans-serif}
             .main-wrapper{margin-left:0}
             .container{max-width:none;width:100%;padding:0}
             .paper-content{padding:20px 16px;border-radius:0;box-shadow:none;max-width:none;width:100%}
@@ -130,6 +134,12 @@ permalink: /research/bacbb/
             .references p{text-indent:-1.5em;padding-left:1.5em;font-size:11px}
         }
         @media print{.sidebar{display:none}.main-wrapper{margin-left:0}.paper-content{padding:15mm 20mm}}
+        /* Breadcrumb */
+        .breadcrumb{font-size:.7rem;color:#999;letter-spacing:.06em;margin-bottom:30px;padding-bottom:15px;border-bottom:1px solid rgba(0,0,0,.05)}
+        .breadcrumb a{color:#888;text-decoration:none;transition:color .2s}
+        .breadcrumb a:hover{color:#0080c6}
+        .bc-sep{margin:0 6px;color:#ccc}
+        .bc-current{color:#555;font-weight:500}
     </style>
 </head>
 <body>
@@ -140,6 +150,7 @@ permalink: /research/bacbb/
 
 <div class="main-wrapper">
 <div class="container">
+{% include breadcrumb.html %}
 <div class="paper-content">
 
 <div class="paper-header">
