--- a/cv/index.html
+++ b/cv/index.html
@@ -1,6 +1,7 @@
 ---
 layout: null
 permalink: /cv/
+title: "Curriculum Vitae"
 ---
 <!DOCTYPE html>
 <html lang="ko">
@@ -40,6 +41,7 @@ body{font-family:'Inter',sans-serif;background:#fafaf8;color:#1a1a1a;line-height
 .nav-list a.active{color:#0080c6;font-weight:500}
 
 .sidebar-footer{padding-top:20px;border-top:1px solid rgba(0,0,0,.06);font-size:.7rem;color:#aaa;text-align:center}
+.nav-toggle{display:none}
 
 .main-wrapper{margin-left:280px;margin-right:260px;min-height:100vh}
 
@@ -97,11 +99,19 @@ body{font-family:'Inter',sans-serif;background:#fafaf8;color:#1a1a1a;line-height
     .nav-list{display:flex;gap:15px;flex-wrap:wrap}
     .nav-list li{margin-bottom:0}
     .sidebar-footer{display:none}
+    .nav-extra{display:none}.sidebar-nav.expanded .nav-extra{display:inline-block}
+    .nav-toggle{display:inline-block;padding:8px 14px;background:none;border:1px solid #ddd;border-radius:6px;font-size:.75rem;color:#888;cursor:pointer;letter-spacing:.05em;margin-bottom:10px;font-family:'Inter',sans-serif}
     .main-wrapper{margin-left:0;margin-right:0}
     .right-sidebar{display:none}
     .container{padding:40px 25px 60px}
     .cv-item-header{flex-direction:column;gap:3px}
 }
+/* Breadcrumb */
+.breadcrumb{font-size:.7rem;color:#999;letter-spacing:.06em;margin-bottom:30px;padding-bottom:15px;border-bottom:1px solid rgba(0,0,0,.05)}
+.breadcrumb a{color:#888;text-decoration:none;transition:color .2s}
+.breadcrumb a:hover{color:#0080c6}
+.bc-sep{margin:0 6px;color:#ccc}
+.bc-current{color:#555;font-weight:500}
     </style>
 </head>
 <body>
@@ -112,6 +122,7 @@ body{font-family:'Inter',sans-serif;background:#fafaf8;color:#1a1a1a;line-height
 
 <div class="main-wrapper">
     <div class="container">
+        {% include breadcrumb.html %}
         <header class="cv-header">
             <h1 class="cv-name">Ha Rim Jung</h1>
             <p class="cv-title">Quantitative Finance Researcher</p>
