--- a/reports/weekly-20260207/index.html
+++ b/reports/weekly-20260207/index.html
@@ -1,5 +1,6 @@
 ---
 layout: null
+title: "Weekly Report (02/07)"
 ---
 <!DOCTYPE html>
 <html lang="ko">
@@ -49,6 +50,7 @@ body { font-family: 'Noto Serif KR', Georgia, serif; background: #fafaf8; color:
 .nav-list a:hover{color:#0080c6;padding-left:5px}
 .nav-list a.active{color:#0080c6;font-weight:500}
 .sidebar-footer{padding-top:20px;border-top:1px solid rgba(0,0,0,.06);font-size:.7rem;color:#aaa;text-align:center}
+.nav-toggle{display:none}
 
 /* Main Content */
 .main-wrapper{margin-left:280px;margin-right:260px;min-height:100vh}
@@ -80,6 +82,8 @@ body { font-family: 'Noto Serif KR', Georgia, serif; background: #fafaf8; color:
     .nav-list{display:flex;gap:12px;flex-wrap:wrap}
     .nav-list li{margin-bottom:0}
     .sidebar-footer{display:none}
+    .nav-extra{display:none}.sidebar-nav.expanded .nav-extra{display:inline-block}
+    .nav-toggle{display:inline-block;padding:8px 14px;background:none;border:1px solid #ddd;border-radius:6px;font-size:.75rem;color:#888;cursor:pointer;letter-spacing:.05em;margin-bottom:10px;font-family:'Inter',sans-serif}
     .main-wrapper{margin-left:0!important;margin-right:0!important;width:100%!important}
     .right-sidebar{display:none}
     .container{max-width:none!important;width:100%!important;padding:16px!important;margin:0!important}
@@ -195,6 +199,12 @@ body { font-family: 'Noto Serif KR', Georgia, serif; background: #fafaf8; color:
 .indicator-name { font-size: 10px; text-transform: uppercase; letter-spacing: 1px; color: #888; margin-bottom: 5px; }
 .indicator-value { font-size: 18px; font-weight: 700; font-family: 'Roboto Mono', monospace; }
 .indicator-signal { font-size: 11px; margin-top: 5px; }
+/* Breadcrumb */
+.breadcrumb{font-size:.7rem;color:#999;letter-spacing:.06em;margin-bottom:30px;padding-bottom:15px;border-bottom:1px solid rgba(0,0,0,.05)}
+.breadcrumb a{color:#888;text-decoration:none;transition:color .2s}
+.breadcrumb a:hover{color:#0080c6}
+.bc-sep{margin:0 6px;color:#ccc}
+.bc-current{color:#555;font-weight:500}
 </style>
 </head>
 <body>
@@ -205,6 +215,7 @@ body { font-family: 'Noto Serif KR', Georgia, serif; background: #fafaf8; color:
 
 <div class="main-wrapper">
 <div class="container">
+{% include breadcrumb.html %}
 
 <div class="masthead">
     <div class="masthead-title">Weekly Investment Report</div>
