--- a/research/move-vasicek-kr/index.html
+++ b/research/move-vasicek-kr/index.html
@@ -1,6 +1,7 @@
 ---
 layout: null
 permalink: /research/move-vasicek-kr/
+title: "MOVE-Vasicek Model"
 ---
 <!DOCTYPE html>
 <html lang="ko">
@@ -73,6 +74,7 @@ permalink: /research/move-vasicek-kr/
         
         .sidebar-footer{padding-top:20px;border-top:1px solid rgba(0,0,0,.06);font-size:.7rem;color:#aaa;text-align:center}
         .sidebar-footer a{color:#999;text-decoration:none}
+        .nav-toggle{display:none}
         
         /* Main Content */
         .main-wrapper{margin-left:280px;margin-right:260px;min-height:100vh}
@@ -102,6 +104,8 @@ permalink: /research/move-vasicek-kr/
             .nav-list{display:flex;gap:15px;flex-wrap:wrap}
             .nav-list li{margin-bottom:0}
             .sidebar-footer{display:none}
+            .nav-extra{display:none}.sidebar-nav.expanded .nav-extra{display:inline-block}
+            .nav-toggle{display:inline-block;padding:8px 14px;background:none;border:1px solid #ddd;border-radius:6px;font-size:.75rem;color:#888;cursor:pointer;letter-spacing:.05em;margin-bottom:10px;font-family:'Inter',sans-serif}
             .main-wrapper{margin-left:0;margin-right:0}
             .right-sidebar{display:none}
             .container{padding:30px 20px}
@@ -159,9 +163,16 @@ permalink: /research/move-vasicek-kr/
         .ref-list { font-size: 14px; line-height: 1.8; }
         .ref-item { margin-bottom: 8px; }
         @media (max-width: 768px) { .headline { font-size: 28px; } .key-stats { grid-template-columns: repeat(2, 1fr); } }
+        /* Breadcrumb */
+        .breadcrumb{font-size:.7rem;color:#999;letter-spacing:.06em;margin-bottom:30px;padding-bottom:15px;border-bottom:1px solid rgba(0,0,0,.05)}
+        .breadcrumb a{color:#888;text-decoration:none;transition:color .2s}
+        .breadcrumb a:hover{color:#0080c6}
+        .bc-sep{margin:0 6px;color:#ccc}
+        .bc-current{color:#555;font-weight:500}
 </style>
 
 <div class="container">
+    {% include breadcrumb.html %}
     <div class="masthead">
         <span class="section-label">Quantitative Finance Research</span>
         <span class="date-line">February 05, 2026</span>
