Speed up intro entrance: ~2s total instead of ~5.5s

--- a/index.html
+++ b/index.html
@@ -759,26 +759,21 @@ function draw(){
 draw();
 
 /* ?먥븧??5. ENTRANCE ANIMATION ?먥븧??*/
-const tl=gsap.timeline({delay:.5});
+const tl=gsap.timeline({delay:.15});
 
 tl
-.to('.ambient-glow',{opacity:1,duration:1.8,ease:'power1.out'})
-.to('.intro-vol',{opacity:1,duration:.6,ease:'power2.out'},'-=.9')
-.to('.intro-date',{opacity:1,duration:.6,ease:'power2.out'},'-=.45')
-.to('.intro-rule',{scaleX:1,duration:.8,ease:'power2.inOut'},'-=.35')
-.to('.intro-accent-rule',{width:'80px',duration:.6,ease:'power2.inOut'},'-=.25')
+.to('.ambient-glow',{opacity:1,duration:.8,ease:'power1.out'})
+.to(['.intro-vol','.intro-date'],{opacity:1,duration:.3,ease:'power2.out'},'-=.4')
+.to('.intro-rule',{scaleX:1,duration:.4,ease:'power2.inOut'},'-=.2')
+.to('.intro-accent-rule',{width:'80px',duration:.3,ease:'power2.inOut'},'-=.15')
 .add(()=>{
     document.querySelectorAll('.intro-name .char').forEach(ch=>ch.classList.add('visible'));
-},'-=.15')
-.to('.intro-affil',{opacity:1,duration:.6,ease:'power2.out'},'+=.3')
-.to('.intro-epigraph',{opacity:1,duration:.8,ease:'power2.out'},'-=.2')
-.to('.intro-diamond-div',{opacity:1,duration:.5,ease:'power2.out'},'-=.3')
-.to('.intro-kw',{opacity:1,duration:.3,stagger:.06,ease:'power2.out'},'-=.15')
-.to('.intro-eq',{opacity:1,duration:.6,ease:'power2.out'},'-=.1')
-.to('.intro-enter',{opacity:1,duration:.7,ease:'power2.out'},'+=.15')
-.to('.intro-enter-hint',{opacity:1,duration:.5,ease:'power2.out'},'-=.45')
-.to('.intro-side',{opacity:1,duration:1},'-=.5')
-.to('.intro-page',{opacity:1,duration:.6},'-=.5');
+},'-=.1')
+.to(['.intro-affil','.intro-epigraph'],{opacity:1,duration:.4,ease:'power2.out'},'+=.1')
+.to(['.intro-diamond-div','.intro-kw'],{opacity:1,duration:.25,ease:'power2.out'},'-=.15')
+.to('.intro-eq',{opacity:1,duration:.3,ease:'power2.out'},'-=.1')
+.to(['.intro-enter','.intro-enter-hint'],{opacity:1,duration:.35,ease:'power2.out'},'+=.05')
+.to(['.intro-side','.intro-page'],{opacity:1,duration:.5},'-=.25');
 
 gsap.set('.intro-rule',{scaleX:0,transformOrigin:'center'});
 
