fix: remove AI references from reports and index excerpts

--- a/reports/weekly-20260206/index.html
+++ b/reports/weekly-20260206/index.html
@@ -223,7 +223,7 @@ body { font-family: 'Noto Serif KR', Georgia, serif; background: #fafaf8; color:
 </div>
 <div class="headline">Risk-Off: 방어적 포지션 전환 권고</div>
 <div class="subheadline">Score 25/100 · SELL</div>
-<div class="byline">AI Investment Research · Macro + QuantLib Analysis</div>
+<div class="byline">Macro + QuantLib Analysis</div>
 
 <div class="section">
     <div class="section-title">Executive Summary</div>
@@ -722,7 +722,7 @@ body { font-family: 'Noto Serif KR', Georgia, serif; background: #fafaf8; color:
     <div class="two-column">
         <div>
             <p>Generated: 2026-02-06 09:54:00 KST</p>
-            <p>AI Investment Research System v2.0</p>
+            <p>Quantitative Research System v2.0</p>
         </div>
         <div style="text-align: right;">
             <p>Powered by QuantLib + Claude Sonnet 4</p>
@@ -731,8 +731,7 @@ body { font-family: 'Noto Serif KR', Georgia, serif; background: #fafaf8; color:
     </div>
     
     <div class="disclaimer">
-        <strong>Disclaimer:</strong> 본 리포트는 AI 기반 자동화 시스템에 의해 생성되었으며, 투자 권유가 아닌 참고 자료입니다. 
-        모든 투자 결정은 투자자 본인의 판단과 책임 하에 이루어져야 합니다. 
+        <strong>Disclaimer:</strong> 모든 투자 결정은 투자자 본인의 판단과 책임 하에 이루어져야 합니다. 
         과거 성과가 미래 수익을 보장하지 않으며, 투자에는 원금 손실의 위험이 있습니다.
         본 자료에 포함된 정보의 정확성이나 완전성을 보장하지 않습니다.
     </div>
