--- a/editor/index.html
+++ b/editor/index.html
@@ -67,7 +67,7 @@ body{font-family:'Inter',sans-serif;background:#f5f5f0;color:#1a1a1a;min-height:
 .preview-paper table{width:100%;border-collapse:collapse;margin:20px 0;font-size:12.5px}
 .preview-paper table caption{font-weight:700;text-align:left;margin-bottom:8px;font-size:13.5px;color:#1d3557}
 .preview-paper thead th{background:#1d3557;color:white;padding:10px;font-weight:600;font-size:11.5px;text-align:center}
-.preview-paper tbody td{padding:7px 10px;border-bottom:1px solid #eee;text-align:center}
+.preview-paper tbody td{padding:7px 10px;border-bottom:1px solid #cf7f7f;text-align:center}
 .preview-paper tbody tr:nth-child(even){background:#fafafa}
 .preview-paper .hypothesis{background:linear-gradient(135deg,#f8f9fa,#fff);border-left:3px solid #e63946;padding:15px 20px;margin:12px 0;border-radius:0 6px 6px 0}
 .preview-paper .hypothesis strong{color:#e63946}
