Add Round 6 (NLP + Sentiment) to Guide
- Added guide/round-06/index.html (3337 lines, 225KB)
- Updated guide/index.html: R5→Done, R6→Done with NLP content, R7→Next
- Fixed R6 title from 'Deep Learning' to 'NLP + Sentiment Analysis'

--- a/guide/index.html
+++ b/guide/index.html
@@ -146,8 +146,8 @@ body{font-family:'Inter',sans-serif;background:#fafaf8;color:#1a1a1a;line-height
             </div>
         </a>
 
-        <a href="/guide/round-05/" class="round-card current">
-            <div class="round-number">Round 05 <span class="round-status status-current">● Now</span></div>
+        <a href="/guide/round-05/" class="round-card done">
+            <div class="round-number">Round 05 <span class="round-status status-done">✓ Done</span></div>
             <h2 class="round-title">Unsupervised Learning + Time Series</h2>
             <p class="round-desc">PCA, t-SNE, K-Means, DBSCAN 클러스터링과 ARIMA, GARCH 시계열 모델링.</p>
             <div class="round-topics">
@@ -158,25 +158,28 @@ body{font-family:'Inter',sans-serif;background:#fafaf8;color:#1a1a1a;line-height
             </div>
         </a>
 
-        <div class="round-card locked">
-            <div class="round-number">Round 06 <span class="round-status status-locked">Locked</span></div>
-            <h2 class="round-title">Deep Learning Foundations</h2>
-            <p class="round-desc">신경망 기초, 역전파, CNN/RNN 아키텍처, PyTorch 기반 금융 시계열 예측.</p>
+        <a href="/guide/round-06/" class="round-card done">
+            <div class="round-number">Round 06 <span class="round-status status-done">✓ Done</span></div>
+            <h2 class="round-title">NLP + Sentiment Analysis</h2>
+            <p class="round-desc">토큰화, TF-IDF, Word2Vec, LDA 토픽 모델링, Transformer/BERT, FinBERT 금융 감성분석.</p>
+            <div class="round-topics">
+                <span class="topic-tag">NLP</span>
+                <span class="topic-tag">TF-IDF</span>
+                <span class="topic-tag">Word2Vec</span>
+                <span class="topic-tag">BERT</span>
+                <span class="topic-tag">Sentiment</span>
+            </div>
+        </a>
+
+        <div class="round-card current">
+            <div class="round-number">Round 07 <span class="round-status status-current">● Next</span></div>
+            <h2 class="round-title">Deep Learning (ANN, CNN, RNN, LSTM)</h2>
+            <p class="round-desc">퍼셉트론, 역전파, CNN 이미지 패턴 인식, RNN/LSTM 시계열 예측, PyTorch 기초.</p>
             <div class="round-topics">
                 <span class="topic-tag">Neural Networks</span>
                 <span class="topic-tag">PyTorch</span>
+                <span class="topic-tag">CNN</span>
                 <span class="topic-tag">LSTM</span>
-            </div>
-        </div>
-
-        <div class="round-card locked">
-            <div class="round-number">Round 07 <span class="round-status status-locked">Locked</span></div>
-            <h2 class="round-title">Convex Optimization</h2>
-            <p class="round-desc">볼록 최적화 이론, 포트폴리오 최적화, CVXPY를 활용한 제약 조건 최적화.</p>
-            <div class="round-topics">
-                <span class="topic-tag">Convex Optimization</span>
-                <span class="topic-tag">CVXPY</span>
-                <span class="topic-tag">Portfolio</span>
             </div>
         </div>
 
