Deploy R7 + fix sidebar links (round_XX → round-XX)
- Fix R1-R6 sidebar: round_XX/lecture_XX.html → round-XX/ (404 fix)
- Deploy R7 Deep Learning lecture to guide/round-07/
- Update guide index: R7→Done, R8→Next, progress 70%

--- a/guide/index.html
+++ b/guide/index.html
@@ -93,7 +93,7 @@ body{font-family:'Inter',sans-serif;background:#fafaf8;color:#1a1a1a;line-height
 
     <div class="progress-overview">
         <span class="progress-label">Overall Progress</span>
-        <div class="progress-bar"><div class="progress-fill" style="width:50%"></div></div>
+        <div class="progress-bar"><div class="progress-fill" style="width:70%"></div></div>
         <span class="progress-text">5 / 10 Rounds</span>
     </div>
 
@@ -171,8 +171,8 @@ body{font-family:'Inter',sans-serif;background:#fafaf8;color:#1a1a1a;line-height
             </div>
         </a>
 
-        <div class="round-card current">
-            <div class="round-number">Round 07 <span class="round-status status-current">● Next</span></div>
+        <a href="round-07/" class="round-card" style="text-decoration:none;color:inherit">
+            <div class="round-number">Round 07 <span class="round-status status-done">✓ Done</span></div>
             <h2 class="round-title">Deep Learning (ANN, CNN, RNN, LSTM)</h2>
             <p class="round-desc">퍼셉트론, 역전파, CNN 이미지 패턴 인식, RNN/LSTM 시계열 예측, PyTorch 기초.</p>
             <div class="round-topics">
@@ -181,10 +181,10 @@ body{font-family:'Inter',sans-serif;background:#fafaf8;color:#1a1a1a;line-height
                 <span class="topic-tag">CNN</span>
                 <span class="topic-tag">LSTM</span>
             </div>
-        </div>
+        </a>
 
         <div class="round-card locked">
-            <div class="round-number">Round 08 <span class="round-status status-locked">Locked</span></div>
+            <div class="round-number">Round 08 <span class="round-status status-current">● Next</span></div>
             <h2 class="round-title">Reinforcement Learning for Trading</h2>
             <p class="round-desc">강화학습 기초, Q-Learning, DQN 기반 트레이딩 에이전트 구현.</p>
             <div class="round-topics">
@@ -221,7 +221,7 @@ body{font-family:'Inter',sans-serif;background:#fafaf8;color:#1a1a1a;line-height
         <h3 class="curriculum-title">Curriculum Overview</h3>
         <div class="curriculum-grid">
             <div class="curriculum-item"><span class="label">Level</span> Python 초급 → HFT 시스템</div>
-            <div class="curriculum-item"><span class="label">Rounds</span> 10 Rounds (현재 5/10)</div>
+            <div class="curriculum-item"><span class="label">Rounds</span> 10 Rounds (현재 7/10)</div>
             <div class="curriculum-item"><span class="label">Focus</span> Convex Optimization + DL</div>
             <div class="curriculum-item"><span class="label">Style</span> 올인원 자기완결형 강의</div>
             <div class="curriculum-item"><span class="label">Math</span> MathJax 수식 포함</div>
