Add Round 8 lecture + update guide landing page

--- a/guide/index.html
+++ b/guide/index.html
@@ -93,8 +93,8 @@ body{font-family:'Inter',sans-serif;background:#fafaf8;color:#1a1a1a;line-height
 
     <div class="progress-overview">
         <span class="progress-label">Overall Progress</span>
-        <div class="progress-bar"><div class="progress-fill" style="width:70%"></div></div>
-        <span class="progress-text">5 / 10 Rounds</span>
+        <div class="progress-bar"><div class="progress-fill" style="width:80%"></div></div>
+        <span class="progress-text">8 / 10 Rounds</span>
     </div>
 
     <div class="round-list">
@@ -171,7 +171,7 @@ body{font-family:'Inter',sans-serif;background:#fafaf8;color:#1a1a1a;line-height
             </div>
         </a>
 
-        <a href="round-07/" class="round-card" style="text-decoration:none;color:inherit">
+        <a href="round-07/" class="round-card completed" style="text-decoration:none;color:inherit">
             <div class="round-number">Round 07 <span class="round-status status-done">✓ Done</span></div>
             <h2 class="round-title">Deep Learning (ANN, CNN, RNN, LSTM)</h2>
             <p class="round-desc">퍼셉트론, 역전파, CNN 이미지 패턴 인식, RNN/LSTM 시계열 예측, PyTorch 기초.</p>
@@ -183,31 +183,34 @@ body{font-family:'Inter',sans-serif;background:#fafaf8;color:#1a1a1a;line-height
             </div>
         </a>
 
-        <div class="round-card locked">
-            <div class="round-number">Round 08 <span class="round-status status-current">● Next</span></div>
-            <h2 class="round-title">Reinforcement Learning for Trading</h2>
-            <p class="round-desc">강화학습 기초, Q-Learning, DQN 기반 트레이딩 에이전트 구현.</p>
+        <a href="round-08/" class="round-card current" style="text-decoration:none;color:inherit">
+            <div class="round-number">Round 08 <span class="round-status status-current">● Current</span></div>
+            <h2 class="round-title">Convex Optimization + Portfolio Optimization + Transformer</h2>
+            <p class="round-desc">볼록 최적화 이론, CVXPY, Mean-Variance, Black-Litterman, Risk Parity, HRP, Kelly Criterion, Transformer Self-Attention, 금융 시계열 예측.</p>
             <div class="round-topics">
-                <span class="topic-tag">RL</span>
-                <span class="topic-tag">DQN</span>
-                <span class="topic-tag">Trading Agent</span>
+                <span class="topic-tag">Convex Optimization</span>
+                <span class="topic-tag">CVXPY</span>
+                <span class="topic-tag">Portfolio</span>
+                <span class="topic-tag">Transformer</span>
+                <span class="topic-tag">Self-Attention</span>
             </div>
-        </div>
+        </a>
 
         <div class="round-card locked">
             <div class="round-number">Round 09 <span class="round-status status-locked">Locked</span></div>
-            <h2 class="round-title">HFT System Architecture</h2>
-            <p class="round-desc">고빈도 트레이딩 시스템 설계, 주문 실행 최적화, 레이턴시 관리.</p>
+            <h2 class="round-title">HFT System Architecture + Reinforcement Learning</h2>
+            <p class="round-desc">시장 마이크로스트럭처, 오더북, HFT 전략, Q-Learning, DQN, PPO 트레이딩 에이전트.</p>
             <div class="round-topics">
                 <span class="topic-tag">HFT</span>
-                <span class="topic-tag">Execution</span>
-                <span class="topic-tag">Latency</span>
+                <span class="topic-tag">Microstructure</span>
+                <span class="topic-tag">RL</span>
+                <span class="topic-tag">DQN</span>
             </div>
         </div>
 
         <div class="round-card locked">
             <div class="round-number">Round 10 <span class="round-status status-locked">Locked</span></div>
-            <h2 class="round-title">Integration + Live Trading</h2>
+            <h2 class="round-title">Integration: Full HFT Pipeline</h2>
             <p class="round-desc">전체 파이프라인 통합, 백테스팅 프레임워크, 리스크 관리, 실전 배포.</p>
             <div class="round-topics">
                 <span class="topic-tag">Backtesting</span>
@@ -221,7 +224,7 @@ body{font-family:'Inter',sans-serif;background:#fafaf8;color:#1a1a1a;line-height
         <h3 class="curriculum-title">Curriculum Overview</h3>
         <div class="curriculum-grid">
             <div class="curriculum-item"><span class="label">Level</span> Python 초급 → HFT 시스템</div>
-            <div class="curriculum-item"><span class="label">Rounds</span> 10 Rounds (현재 7/10)</div>
+            <div class="curriculum-item"><span class="label">Rounds</span> 10 Rounds (현재 8/10)</div>
             <div class="curriculum-item"><span class="label">Focus</span> Convex Optimization + DL</div>
             <div class="curriculum-item"><span class="label">Style</span> 올인원 자기완결형 강의</div>
             <div class="curriculum-item"><span class="label">Math</span> MathJax 수식 포함</div>
